--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon index.js"
   },
   "author": "Felix Marin Ramirez",
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
+    "cheerio-advanced-selectors": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
@@ -28,6 +29,7 @@
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-adblocker": "^2.11.11",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "scrapper": "^1.0.1"
   }
 }
